custom time range added successfully

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -92,7 +92,7 @@
                   </div>
                 </div>
                 <div class="crop-actions">
-                  <a href="/farm/<%= crop._id %>" class="btn btn-primary btn-sm">
+                  <a href="/farm/influx/<%= crop._id %>" class="btn btn-primary btn-sm">
                     <i class="bi bi-graph-up"></i> View Reading
                   </a>
                   <a href="/farm/cropreading/<%= crop._id %>" class="btn btn-success btn-sm">
